--- a/app/src/main/res/layout/activity_stoccaggio.xml
+++ b/app/src/main/res/layout/activity_stoccaggio.xml
@@ -9,17 +9,25 @@
         android:layout_height="wrap_content"
         android:text="Conferma per l'aratura dei prodotti:"
         android:textSize="20sp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:textColor="#000000"
         android:gravity="center"
         android:id="@+id/text1"/>
-    <TableLayout
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/text1"
+        android:id="@+id/linear1">
+
+        <TableLayout
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_below="@+id/text1">
+        android:id="@+id/table">
 
         <TableRow
             android:background="@color/TableColor">
@@ -43,14 +51,67 @@
                 android:layout_marginRight="50dp"
                 android:textColor="#fff"
                 android:gravity="right"/>
-
         </TableRow>
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="wrap_content"
+            android:layout_height="173dp"
+            android:layout_below="@+id/text1">
+        </ListView>
+</TableLayout>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Media del Raccolto (su base annua):"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:id="@+id/text2"
+        android:layout_below="@id/linear1"
+        android:layout_marginTop="30dp"/>
+
+
+        <TableLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:id="@+id/table2"
+            android:layout_below="@+id/text2">
+
+            <TableRow
+                android:background="@color/TableColor">
+                <TextView
+                    android:text="Prodotto"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:textColor="#ffff"
+                    android:gravity="left"
+                    />
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:background="#000000"/>
+                <TextView
+                    android:text="Media"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:textColor="#fff"
+                    android:gravity="right"/>
+            </TableRow>
 
     <ListView
+        android:id="@+id/list2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text1"
-        android:id="@+id/list"/>
+        android:layout_height="173dp"
+        android:layout_below="@+id/table2">
+    </ListView>
 </TableLayout>
 
 </RelativeLayout>
