--- a/app/src/main/res/layout/activity_stoccaggio.xml
+++ b/app/src/main/res/layout/activity_stoccaggio.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/back"
+        android:layout_width="80dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/back"
+        android:onClick="goBack"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -33,7 +40,7 @@
             android:background="@color/TableColor">
             <TextView
                 android:text="Prodotto"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:textColor="#ffff"
@@ -46,18 +53,18 @@
                 android:background="#000000"/>
             <TextView
                 android:text="Raccolta"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:textColor="#fff"
                 android:gravity="right"/>
         </TableRow>
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="wrap_content"
-            android:layout_height="173dp"
-            android:layout_below="@+id/text1">
-        </ListView>
+
+            <ListView
+                android:id="@+id/list"
+                android:layout_width="wrap_content"
+                android:layout_height="157dp"
+                android:layout_below="@+id/text1"></ListView>
 </TableLayout>
     </LinearLayout>
 
@@ -86,7 +93,7 @@
                 android:background="@color/TableColor">
                 <TextView
                     android:text="Prodotto"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
                     android:textColor="#ffff"
@@ -97,21 +104,24 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:background="#000000"/>
+
                 <TextView
-                    android:text="Media"
-                    android:textSize="20dp"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
+                    android:textAlignment="center"
+                    android:text="Media"
                     android:textColor="#fff"
-                    android:gravity="right"/>
+                    android:textSize="20sp" />
             </TableRow>
 
     <ListView
         android:id="@+id/list2"
         android:layout_width="wrap_content"
-        android:layout_height="173dp"
-        android:layout_below="@+id/table2">
+        android:layout_height="157dp"
+        >
     </ListView>
 </TableLayout>
+
+
 
 </RelativeLayout>
