--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -3,24 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-20dp"
+        android:layout_marginTop="-13dp"
         app:srcCompat="@drawable/field_homepage" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:background="@color/colorPrimary"
-        android:elevation="4dp"
+        android:layout_marginTop="250dp"
+        android:background="@drawable/border_homepage"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="25dp">
 
         <RelativeLayout
             android:id="@+id/relativeOne"
@@ -31,21 +30,21 @@
 
             <Button
                 android:id="@+id/datiCampo"
-                android:layout_width="150dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/et_style"
+                android:background="@drawable/edit_element_style"
                 android:text="Dati campo"
                 android:textSize="20sp" />
 
             <Button
                 android:id="@+id/semina"
-                android:layout_width="150dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
                 android:layout_toRightOf="@id/datiCampo"
-                android:background="@drawable/et_style"
+                android:background="@drawable/edit_element_style"
                 android:text="Semina"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
@@ -59,21 +58,21 @@
 
             <Button
                 android:id="@+id/stoccaggio"
-                android:layout_width="150dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/et_style"
+                android:background="@drawable/edit_element_style"
                 android:text="Stoccaggio"
                 android:textSize="20sp" />
 
             <Button
                 android:id="@+id/irrigazione"
-                android:layout_width="150dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
                 android:layout_toRightOf="@id/stoccaggio"
-                android:background="@drawable/et_style"
+                android:background="@drawable/edit_element_style"
                 android:text="Irrigazione"
-                android:textSize="17sp" />
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
@@ -81,15 +80,15 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/relativeTwo"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="90dp"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/raccolta"
-                android:layout_width="150dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/et_style"
+                android:background="@drawable/edit_element_style"
                 android:text="Raccolta"
                 android:textSize="20sp" />
 
@@ -99,6 +98,7 @@
                 android:layout_below="@+id/raccolta"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
+                android:onClick="goLogout"
                 android:text="Esci dall'account"
                 android:textColor="#000"
                 android:textSize="20sp" />
