--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -14,12 +14,11 @@
         app:srcCompat="@drawable/field_homepage" />
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="250dp"
         android:background="@drawable/border_homepage"
-        android:orientation="vertical"
-        android:padding="25dp">
+        android:padding="20dp">
 
         <RelativeLayout
             android:id="@+id/relativeOne"
@@ -40,7 +39,7 @@
                 android:id="@+id/semina"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
+                android:layout_marginLeft="88dp"
                 android:layout_toRightOf="@id/datiCampo"
                 android:background="@drawable/edit_element_style"
                 android:text="Semina"
@@ -53,7 +52,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/relativeOne"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="80dp"
             android:orientation="vertical">
 
             <Button
@@ -80,7 +79,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/relativeTwo"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="40dp"
             android:orientation="vertical">
 
             <Button
