--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/datiCampo"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
+                android:onClick="goDatiCampo"
                 android:background="@drawable/edit_element_style"
                 android:text="Dati campo"
                 android:textSize="20sp" />
@@ -40,6 +41,7 @@
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="88dp"
+                android:onClick="goSemina"
                 android:layout_toRightOf="@id/datiCampo"
                 android:background="@drawable/edit_element_style"
                 android:text="Semina"
@@ -59,6 +61,7 @@
                 android:id="@+id/stoccaggio"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
+                android:onClick="goStoccaggio"
                 android:background="@drawable/edit_element_style"
                 android:text="Stoccaggio"
                 android:textSize="20sp" />
@@ -68,6 +71,7 @@
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
+                android:onClick="goIrrigazione"
                 android:layout_toRightOf="@id/stoccaggio"
                 android:background="@drawable/edit_element_style"
                 android:text="Irrigazione"
@@ -87,6 +91,7 @@
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:onClick="goRaccolta"
                 android:background="@drawable/edit_element_style"
                 android:text="Raccolta"
                 android:textSize="20sp" />
