--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nome*"
+            android:layout_marginLeft="20dp"
             android:textSize="20sp" />
 
         <EditText
@@ -39,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cognome*"
+            android:layout_marginLeft="20dp"
             android:textSize="20sp" />
 
         <EditText
@@ -64,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="E-mail*"
+            android:layout_marginLeft="20dp"
             android:textSize="20sp" />
 
         <EditText
@@ -89,6 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password*"
+            android:layout_marginLeft="20dp"
             android:textSize="20sp" />
 
         <EditText
@@ -114,6 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Numero Carta*"
+            android:layout_marginLeft="20dp"
             android:textSize="17sp" />
 
         <EditText
@@ -138,7 +143,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="cvv*"
+            android:text="CVV*"
+            android:layout_marginLeft="20dp"
             android:textSize="17sp" />
 
         <EditText
