--- a/app/src/main/res/drawable/border_button.xml
+++ b/app/src/main/res/drawable/border_button.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"  android:padding="10dp"
-    android:shape="rectangle">
-    <solid android:color="#FFFFFF" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="10dp"
+    android:shape="rectangle"
+    >
+    <solid android:color="@color/ButtonColor" />
     <corners
         android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp"
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp" />
-    <stroke
-        android:width="1dp"/>
+    <stroke android:width="1dp" />
+
 </shape>
