--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -24,7 +24,9 @@
             android:layout_height="wrap_content"
             android:text="Nome*"
             android:layout_marginLeft="20dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"
+            />
 
         <EditText
             android:id="@+id/nome"
@@ -50,7 +52,8 @@
             android:layout_height="wrap_content"
             android:text="Cognome*"
             android:layout_marginLeft="20dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/cognoem"
@@ -76,7 +79,8 @@
             android:layout_height="wrap_content"
             android:text="E-mail*"
             android:layout_marginLeft="20dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/e_mail"
@@ -102,7 +106,8 @@
             android:layout_height="wrap_content"
             android:text="Password*"
             android:layout_marginLeft="20dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/pass"
@@ -128,7 +133,8 @@
             android:layout_height="wrap_content"
             android:text="Numero Carta*"
             android:layout_marginLeft="20dp"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/numberCard"
@@ -154,7 +160,8 @@
             android:layout_height="wrap_content"
             android:text="CVV*"
             android:layout_marginLeft="20dp"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/cvv"
@@ -190,7 +197,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Inserisci la tua data di nascita"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -205,7 +213,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Giorno"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:layout_width="50dp"
@@ -227,7 +236,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mese"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:layout_width="50dp"
@@ -249,7 +259,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Anno"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold"/>
 
         <EditText
             android:layout_width="50dp"
