--- a/app/src/main/res/layout/activity_raccolta.xml
+++ b/app/src/main/res/layout/activity_raccolta.xml
@@ -66,12 +66,12 @@
                 android:textColor="#ffff"
                 android:gravity="center"/>
         </TableRow>
+
         <ListView
             android:id="@+id/list"
             android:layout_width="wrap_content"
-            android:layout_height="157dp"
-            android:layout_below="@+id/text1">
-        </ListView>
+            android:layout_height="103dp"
+            android:layout_below="@+id/text1"></ListView>
     </TableLayout>
     <TextView
         android:layout_width="match_parent"
@@ -111,6 +111,8 @@
             android:background="@drawable/et_style"
             android:singleLine="true"
             android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="25dp"
@@ -142,6 +144,8 @@
             android:background="@drawable/et_style"
             android:singleLine="true"
             android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
@@ -173,6 +177,8 @@
             android:background="@drawable/et_style"
             android:singleLine="true"
             android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
@@ -204,6 +210,8 @@
             android:inputType="number"
             android:singleLine="true"
             android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
