--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -33,6 +33,9 @@
             android:layout_marginLeft="150dp"
             android:background="@drawable/et_style"
             android:drawableTint="#FF4081"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
             android:singleLine="true" />
@@ -60,6 +63,9 @@
             android:layout_marginLeft="150dp"
             android:background="@drawable/et_style"
             android:drawableTint="#FF4081"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
             android:singleLine="true" />
@@ -87,6 +93,9 @@
             android:layout_marginLeft="150dp"
             android:background="@drawable/et_style"
             android:drawableTint="#FF4081"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
             android:singleLine="true" />
@@ -114,6 +123,9 @@
             android:layout_marginLeft="150dp"
             android:background="@drawable/et_style"
             android:drawableTint="#FF4081"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:singleLine="true" />
@@ -141,6 +153,9 @@
             android:layout_marginLeft="150dp"
             android:background="@drawable/et_style"
             android:drawableTint="#FF4081"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:importantForAutofill="no"
             android:inputType="number"
             android:singleLine="true" />
@@ -168,6 +183,9 @@
             android:layout_marginLeft="300dp"
             android:background="@drawable/et_style"
             android:drawableTint="#FF4081"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:importantForAutofill="no"
             android:inputType="number"
             android:singleLine="true" />
@@ -218,6 +236,9 @@
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginLeft="80dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:background="@drawable/et_style"
             android:inputType="numberDecimal" />
     </RelativeLayout>
@@ -241,6 +262,9 @@
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginLeft="80dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:background="@drawable/et_style"
             android:inputType="numberDecimal" />
     </RelativeLayout>
@@ -264,6 +288,9 @@
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginLeft="80dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingBottom="8dp"
             android:background="@drawable/et_style"
             android:inputType="numberDecimal" />
     </RelativeLayout>
