--- a/app/src/main/res/layout/element_list_raccolta.xml
+++ b/app/src/main/res/layout/element_list_raccolta.xml
@@ -6,7 +6,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/row1"
-        android:textSize="18dp"
+        android:textSize="15sp"
         android:textColor="#000000"
         android:padding="10dp"
         android:layout_alignRight="@+id/view1"
@@ -15,7 +15,7 @@
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="80dp"
         android:background="#000000"
         android:id="@+id/view1"
         />
@@ -30,12 +30,11 @@
         android:padding="10dp"
         android:text=""
         android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold" />
+        android:textSize="15sp" />
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="200dp"
+        android:layout_marginLeft="160dp"
         android:background="#000000"
         android:id="@+id/view2"
         />
@@ -50,37 +49,45 @@
         android:padding="10dp"
         android:text=""
         android:textColor="#000000"
-        android:textSize="18dp" />
+        android:textSize="15sp" />
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="300dp"
+        android:layout_marginLeft="240dp"
         android:background="#000000"
         android:id="@+id/view3"
         />
+
     <TextView
         android:id="@+id/row4"
-        android:layout_width="match_parent"
+        android:layout_width="101dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/view3"
+        android:layout_marginEnd="-42dp"
+        android:layout_marginRight="30dp"
+        android:layout_toStartOf="@+id/change"
         android:gravity="center"
         android:padding="10dp"
         android:text=""
         android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold" />
+        android:textSize="15sp" />
+
 
     <ImageView
+        android:id="@+id/change"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@drawable/change"
+        android:layout_alignLeft="@+id/view3"
+        android:layout_marginLeft="59dp"
         android:layout_marginRight="30dp"
-        android:layout_alignRight="@+id/delete"
-        android:id="@+id/change"/>
+        android:src="@drawable/change" />
+
     <ImageView
+        android:id="@+id/delete"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@drawable/delete"
-        android:id="@+id/delete"
-        android:layout_alignRight="@+id/row4"/>
+        android:layout_alignLeft="@+id/view3"
+        android:layout_marginLeft="102dp"
+        android:src="@drawable/delete" />
+
 </RelativeLayout>
