Main e registrazione modificate
Ci sta nella registrazione un controllo su tutti i dati in input( tranne sulla data di nasccita).
MainActivity ancora da aggiustare ma non ci riesco al momento

--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -43,6 +43,7 @@
             android:textStyle="bold"
             android:layout_marginLeft="10dp"/>
         <EditText
+            android:id="@+id/sendEmail"
             android:layout_width="220dp"
             android:layout_height="30dp"
             android:background="@drawable/et_style"
