--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -57,7 +57,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/cognoem"
+            android:id="@+id/cognome"
             android:layout_width="220dp"
             android:layout_height="30dp"
             android:layout_marginLeft="150dp"
@@ -233,14 +233,15 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/giorno"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginLeft="80dp"
-            android:paddingTop="5dp"
-            android:paddingLeft="5dp"
-            android:paddingBottom="5dp"
             android:background="@drawable/et_style"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -259,6 +260,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/mese"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginLeft="80dp"
@@ -285,6 +287,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/anno"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginLeft="80dp"
