--- a/app/src/main/res/layout/activity_nuovo_solco.xml
+++ b/app/src/main/res/layout/activity_nuovo_solco.xml
@@ -1,6 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageButton
+        android:id="@+id/backId"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/back"
+        android:onClick="goBack" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <EditText
+        android:id="@+id/solco"
+        android:layout_width="220dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/backId"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/et_style"
+        android:drawableTint="#FF4081"
+        android:hint="inserisci il nome del nuovo solco"
+        android:importantForAutofill="no"
+        android:singleLine="true"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+            android:id="@+id/col_disp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="collega il nuovo dispositivo"
+            android:layout_below="@id/solco"
+            android:paddingTop="30dp"
+            android:layout_centerHorizontal="true"
+            />
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/col_disp"
+            android:text="inserisci dispositivo tramite bluetooth"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="80dp"
+            android:background="@drawable/border_button"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+            android:textSize="18sp"
+            android:layout_centerHorizontal="true"
+        />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button1"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/border_button"
+        android:text="Inserisci dispositivo nel sistema"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:layout_centerHorizontal="true"/>
+
+
+</RelativeLayout>
