--- a/app/src/main/res/layout/acitivity_dati_campo.xml
+++ b/app/src/main/res/layout/acitivity_dati_campo.xml
@@ -2,9 +2,27 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-     />
+    <ImageButton
+        android:id="@+id/backId"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/back"
+        android:onClick="goBack" />
+    <ImageView
+        android:id="@+id/Datcam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/backId"
+        android:src="@drawable/daticampoimage"
+        android:layout_centerHorizontal="true"
+        />
+        <ListView
+            android:id="@+id/list1"
+            android:layout_width="wrap_content"
+            android:layout_height="103dp"
+            android:layout_marginTop="50dp"
+            android:layout_below="@id/Datcam">
+
+        </ListView>
 
 </RelativeLayout>
