--- a/app/src/main/res/layout/activity_irrigazione.xml
+++ b/app/src/main/res/layout/activity_irrigazione.xml
@@ -12,8 +12,11 @@
         />
     <fragment
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:id="@+id/map"
-        android:layout_below="@+id/back"/>
+        android:layout_below="@+id/back"
+        android:name="com.google.android.gms.maps.SupportMapFragment"></fragment>
 
 </RelativeLayout>
